# advent-of-code-2020

./: .gitignore  .specific_rules.mk  CMakeLists.txt  Makefile  PreLoad.cmake  benchmark.sh  day1  day1.cpp  profile.sh
include/: chinese_remainder_theorem.h  customs_declaration.h  day1.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  file_to_vec.h  passport_processor.h  rules_parser.h  simulated_handheld_debugger.h  vv_iterator.h
input/: day4_debug.txt  day7_possible_colors.txt  day7_possible_modifiers.txt
src/: CMakeLists.txt  chinese_remainder_theorem.cpp  customs_declaration.cpp  file_to_vec.cpp  find_sum_2020.cpp  passport_processor.cpp  rules_parser.cpp  simulated_handheld_debugger.cpp
src/main/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
