add_library(day1_util file_to_vec.cpp)
add_library(day2_util file_to_vec.cpp)
add_library(day3_util file_to_vec.cpp)
add_library(day4_util passport_processor.cpp file_to_vec.cpp)
add_library(day5_util file_to_vec.cpp)
add_library(day6_util customs_declaration.cpp file_to_vec.cpp)
add_library(day7_util rules_parser.cpp file_to_vec.cpp)
add_library(day8_util simulated_handheld_debugger.cpp file_to_vec.cpp)
add_library(day9_util file_to_vec.cpp)
add_library(day10_util file_to_vec.cpp)
add_library(day11_util file_to_vec.cpp)
add_library(day12_util file_to_vec.cpp)
add_library(day13_util file_to_vec.cpp chinese_remainder_theorem.cpp)
add_library(day14_util file_to_vec.cpp)
